k8s-java/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: spring-cloud-eureka
    k8s.kuboard.cn/name: spring-cloud-eureka
  name: spring-cloud-eureka
  namespace: java-test
spec:
  ingressClassName: nginx
  rules:
  - host: eureka.sundayhk.com
    http:
      paths:
      - backend:
          service:
            name: spring-cloud-eureka
            port:
              number: 8761
        path: /
        pathType: Prefix
